--- a/index.html
+++ b/index.html
@@ -46,17 +46,21 @@
     <p>Monday to Friday: Morning Zumba with Zin Ricky<br>Tuesday & Thursday Evening: Instructor-led Zumba<br>Friday Evening: Zumba with Ricky<br>Saturday: Kids & Teens Kpop Classes<br>Sunday: FitDance or Legacy Day</p>
   </section>
 
-  <section id="contact">
-    <h2>Contact Us</h2>
-    <p><strong>Address:</strong> 20a, Jalan Prima 4, 71010 Port Dickson, Negeri Sembilan<br>
-    <strong>Email:</strong> krtdancestudio@gmail.com<br>
-    <strong>Facebook:</strong> KRT Family Studio<br>
-    <strong>TikTok:</strong> @krtdancestudio<br>
-    <strong>YouTube Kids/Teens:</strong> @krtfamily2</p>
-  </section>
+ <section id="contact">
+  <h2>📞 Contact Us | 联系我们</h2>
+  <ul>
+    <li><strong>📍 Address | 地址:</strong> 20a, Jalan Prima 4, 71010 Port Dickson, Negeri Sembilan, Malaysia  
+      (<a href="https://g.co/kgs/gN7RPZq" target="_blank">View on Google Maps 查看地图</a>)</li>
+    <li><strong>📧 Email | 电邮:</strong> <a href="mailto:krtdancestudio@gmail.com">krtdancestudio@gmail.com</a></li>
+    <li><strong>🌐 Website | 官网:</strong> <a href="https://krt-family.github.io/krtdancestudio" target="_blank">krt-family.github.io/krtdancestudio</a></li>
+    <li><strong>📘 Facebook:</strong> <a href="https://www.facebook.com/krtfamilystudio" target="_blank">KRT Family Studio</a></li>
+    <li><strong>🎵 TikTok:</strong> <a href="https://www.tiktok.com/@krtdancestudio" target="_blank">@krtdancestudio</a></li>
+    <li><strong>📺 YouTube - Zumba & FitDance:</strong>  
+      <a href="https://www.youtube.com/@krtdancestudio" target="_blank">@krtdancestudio</a></li>
+    <li><strong>📺 YouTube - Square Dance:</strong>  
+      <a href="https://www.youtube.com/@krtsquaredance" target="_blank">@krtsquaredance</a></li>
+    <li><strong>📺 YouTube - Kids & Teens Dance:</strong>  
+      <a href="https://www.youtube.com/@krtfamily2" target="_blank">@krtfamily2</a></li>
+  </ul>
+</section>
 
-  <footer>
-    <p>&copy; 2025 KRT Dance Studio. All Rights Reserved.</p>
-  </footer>
-</body>
-</html>
