--- a/index.html
+++ b/index.html
@@ -41,17 +41,56 @@
     </ul>
   </section>
 
-  <section id="schedule">
-    <h2>Weekly Schedule</h2>
-    <p>Monday to Friday: Morning Zumba with Zin Ricky<br>Tuesday & Thursday Evening: Instructor-led Zumba<br>Friday Evening: Zumba with Ricky<br>Saturday: Kids & Teens Kpop Classes<br>Sunday: FitDance or Legacy Day</p>
-  </section>
+ <!-- ✅ Weekly Schedule Section | 每周课程时间表 -->
+<section id="schedule">
+  <h2>📅 Weekly Class Schedule | 每周课程时间表</h2>
+  <ul>
+    <li><strong>Monday to Friday | 星期一至星期五:</strong><br>
+      7:30 AM – Zumba (Main part by Ricky, warm-up by assistant)<br>
+      Zumba主段由Ricky老师带领，热身由助教带领
+    </li>
+    <li><strong>Monday Evening | 星期一晚上:</strong><br>
+      Zumba (Assisted – Ricky present)<br>
+      Zumba由助教带领，Ricky老师在场
+    </li>
+    <li><strong>Tuesday Evening | 星期二晚上:</strong><br>
+      Zumba (Instructor-led – Zin Rizal)<br>
+      Zumba由外聘导师Zin Rizal全程带领
+    </li>
+    <li><strong>Thursday Evening | 星期四晚上:</strong><br>
+      Zumba (Instructor-led – Zin Watie)<br>
+      Zumba由外聘导师Zin Watie全程带领
+    </li>
+    <li><strong>Friday Evening | 星期五晚上:</strong><br>
+      Zumba (Assisted – Ricky present)<br>
+      Zumba由助教带领，Ricky老师在场
+    </li>
+    <li><strong>Friday | 星期五:</strong><br>
+      7:30 PM – Yoga (Teacher Jeslyn)<br>
+      由Jeslyn老师带领的瑜伽课
+    </li>
+    <li><strong>Saturday | 星期六:</strong><br>
+      9:00 AM – Yoga (Teacher Jeslyn)<br>
+      3:00 PM – Kids & Teens Kpop (Beginner)<br>
+      4:30 PM – Kids & Teens Kpop (Advanced)<br>
+      周六上午瑜伽，下午儿童与青少年Kpop初级与高级班
+    </li>
+    <li><strong>Sunday | 星期日:</strong><br>
+      10:30 AM – Practice for Beginner Group<br>
+      4:30 PM – Practice for Advanced Group<br>
+      📌 If students missed Saturday, this is their replacement class.<br>
+      📌 如周六缺课，此为补课；如无缺席，为额外练习
+    </li>
+  </ul>
+</section>
 
- <section id="contact">
+<!-- ✅ Contact Us Section | 联系我们 -->
+<section id="contact">
   <h2>📞 Contact Us | 联系我们</h2>
   <ul>
     <li><strong>📍 Address | 地址:</strong> 20a, Jalan Prima 4, 71010 Port Dickson, Negeri Sembilan, Malaysia  
       (<a href="https://g.co/kgs/gN7RPZq" target="_blank">View on Google Maps 查看地图</a>)</li>
-    <li><strong>📧 Email | 电邮:</strong> <a href="mailto:krtdancestudio@gmail.com">krtdancestudio@gmail.com</a></li>
+    <li><strong>📧 Email | 电邮:</strong> <a href="mailto:segoh82@gmail.com">segoh82@gmail.com</a></li>
     <li><strong>🌐 Website | 官网:</strong> <a href="https://krt-family.github.io/krtdancestudio" target="_blank">krt-family.github.io/krtdancestudio</a></li>
     <li><strong>📘 Facebook:</strong> <a href="https://www.facebook.com/krtfamilystudio" target="_blank">KRT Family Studio</a></li>
     <li><strong>🎵 TikTok:</strong> <a href="https://www.tiktok.com/@krtdancestudio" target="_blank">@krtdancestudio</a></li>
